@@ -1,3 +1,6 @@
+[B][COLOR gold]v2.1.7[/COLOR][/B]
+- Added Premiumize to supported providers for debrid cache check
+
 [B][COLOR gold]v2.1.6[/COLOR][/B]
 - Debrid-check code alterations
 
